<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="consulta.AdicionarFragment"
        android:layout_margin="20dp" >
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            <TextView
                    android:id="@+id/textViewAdicionarConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/adicionarConsulta"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/textViewNomePacienteConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/paciente" />

            <Spinner
                    android:id="@+id/editSpinnerNomePacienteConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />
            <TextView
                    android:id="@+id/textViewNomeMedicoConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/medico" />

            <Spinner
                    android:id="@+id/editSpinnerNomeMedicoConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />


            <TextView
                    android:id="@+id/textViewDataHoraInicioConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dataInicio" />

            <EditText
                    android:id="@+id/editTextDataHoraInicioConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="datetime" />

            <TextView
                    android:id="@+id/textViewDataHoraFimConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dataFim" />

            <EditText
                    android:id="@+id/editTextDataHoraFimConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="datetime" />

            <TextView
                    android:id="@+id/textViewObservacaoConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/observacao" />

            <EditText
                    android:id="@+id/editTextObservacaoConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

            <Button
                    android:id="@+id/buttonSalvarNovaConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/salvar" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>