<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="20dp"
             tools:context="consulta.EditarFragment" >

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <TextView
                    android:id="@+id/textViewEditarConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/editar"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/textViewNomePacienteConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/paciente" />

            <Spinner
                    android:id="@+id/editSpinnerNomePacienteConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

            <TextView
                    android:id="@+id/textViewNomeMedicoConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/medico" />

            <Spinner
                    android:id="@+id/editSpinnerNomeMedicoConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

            <TextView
                    android:id="@+id/textViewDataHoraInicioConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dataInicio" />

            <EditText
                    android:id="@+id/editTextDataHoraInicioConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />

            <TextView
                    android:id="@+id/textViewDataHoraFimConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dataFim" />

            <EditText
                    android:id="@+id/editTextDataHoraFimConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />

            <TextView
                    android:id="@+id/textViewObservacaoConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/observacao" />

            <EditText
                    android:id="@+id/editTextObservacaoConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                <Button
                        android:id="@+id/buttonEditarConsulta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:text="@string/salvar" />

                <Button
                        android:id="@+id/buttonExcluirConsulta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:text="@string/excluir"
                        android:backgroundTint="@color/deleteColor"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>