<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="medico.AdicionarFragment"
        android:layout_margin="20dp" >
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            <TextView
                    android:id="@+id/textViewAdicionarMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/adicionarMedico"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/textViewNomeMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nome" />

            <EditText
                    android:id="@+id/editTextNomeMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            <TextView
                    android:id="@+id/textViewCRMMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/crm" />

            <EditText
                    android:id="@+id/editTextCRMMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            <TextView
                    android:id="@+id/textViewFixoMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/telefone_fixo" />

            <EditText
                    android:id="@+id/editTextFixoMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />

            <TextView
                    android:id="@+id/textViewCelularMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/telefone_celular" />

            <EditText
                    android:id="@+id/editTextCelularMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />

            <Button
                    android:id="@+id/buttonSalvarNovoMedico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/salvar" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>