<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="20dp"
             tools:context="paciente.EditarFragment" >

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <TextView
                    android:id="@+id/textViewEditarPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/editar"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/textViewNomePaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nome" />

            <EditText
                    android:id="@+id/editTextNomePaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            <TextView
                    android:id="@+id/textViewGrupoSanguineoPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/grupoSanguineo" />

            <Spinner
                    android:id="@+id/editSpinnerGrupoSanguineo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

            <TextView
                    android:id="@+id/textViewFixoPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/telefone_fixo" />

            <EditText
                    android:id="@+id/editTextFixoPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />

            <TextView
                    android:id="@+id/textViewCelularPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/telefone_celular" />

            <EditText
                    android:id="@+id/editTextCelularPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                <Button
                        android:id="@+id/buttonEditarPaciente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:text="@string/salvar" />

                <Button
                        android:id="@+id/buttonExcluirPaciente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:text="@string/excluir"
                        android:backgroundTint="@color/deleteColor"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>